scrollbar style fix

--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -78,7 +78,7 @@
 .ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail,
 .ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail,
 .ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail  {
-  background-color: @scroller_bg;
+  // background-color: @scroller_bg;
   opacity: 0.9;
 }
 .ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x,
@@ -87,7 +87,7 @@
 .ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y,
 .ps-container:hover > .ps-scrollbar-x-rail:hover > .ps-scrollbar-x,
 .ps-container:hover > .ps-scrollbar-y-rail:hover > .ps-scrollbar-y   {
-  background-color: @scroller_bg
+  // background-color: @scroller_bg
 }
 .ps-container > .ps-scrollbar-x-rail,
 .ps-container > .ps-scrollbar-y-rail {
